# Battleship

./: Ai.cpp  Ai.h  BotMap.cpp  BotMap.h  CMakeLists.txt  GameManager.cpp  GameManager.h  Map.cpp  Map.h  PlayerMap.cpp  PlayerMap.h  README.md  Ship.cpp  Ship.h  main.cpp  systemClear.cpp
Scripts/: Ai.cpp  GameManager.cpp  GameManager.h  Map.h  PlayerMap.h  Ship.cpp  Ship.h  main.cpp
UnitTests/: GameManagerTEST.cpp  GameManagerTest
src/: Ai.h  BotMap.h  GameManager.cpp  GameManager.h  Map.cpp  Map.h  systemClear.cpp
